--- a/css/style.css
+++ b/css/style.css
@@ -937,7 +937,10 @@ body.ie ._ibg img {
 }
 
 .header._scroll .header__wrapper {
-  background-color: rgba(0, 91, 193, 0.8);
+  -webkit-transition: background-color 0.3s ease 0s;
+  -o-transition: background-color 0.3s ease 0s;
+  transition: background-color 0.3s ease 0s;
+  background-color: #005bc1;
 }
 
 .header._scroll .header__body {
@@ -976,6 +979,7 @@ body.ie ._ibg img {
 
 .header__logo {
   padding: 11px 0px 11px 0px;
+  z-index: 2;
 }
 
 .header__img {
@@ -1005,6 +1009,7 @@ body.ie ._ibg img {
   font-weight: 600;
   line-height: 135.7142857143%;
   color: #FFFFFF;
+  padding: 10px 0px;
 }
 
 .menu__link:hover {
@@ -1013,52 +1018,6 @@ body.ie ._ibg img {
   transition: color 0.3s ease 0s;
   color: #08e4d9;
 }
-
-/*
-//Burger
-.icon-menu {
-	display: none;
-	@media (max-width: $md3+px) {
-		display: block;
-		position: absolute;
-		top: 18px;
-		right: 10px;
-		width: 30px;
-		height: 18px;
-		cursor: pointer;
-		z-index: 5;
-		span {
-			transition: all 0.3s ease 0s;
-			top: calc(50% - 1px);
-			left: 0px;
-			position: absolute;
-			width: 100%;
-			height: 2px;
-			background-color: #000;
-			&:first-child {
-				top: 0px;
-			}
-			&:last-child {
-				top: auto;
-				bottom: 0px;
-			}
-		}
-		&._active {
-			span {
-				transform: scale(0);
-				&:first-child {
-					transform: rotate(-45deg);
-					top: calc(50% - 1px);
-				}
-				&:last-child {
-					transform: rotate(45deg);
-					bottom: calc(50% - 1px);
-				}
-			}
-		}
-	}
-}
-*/
 
 .footer {
   background-color: #005BC1;
@@ -1284,10 +1243,6 @@ body.ie ._ibg img {
   -webkit-transition: background-color 0.3s ease 0s;
   -o-transition: background-color 0.3s ease 0s;
   transition: background-color 0.3s ease 0s;
-}
-
-.main-block__button:hover {
-  background-color: rgba(0, 91, 193, 0.4);
 }
 
 .main-block__image {
@@ -1640,7 +1595,7 @@ body.ie ._ibg img {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  padding: 15px 34px;
+  padding: 14px 30px;
 }
 
 .news__button:hover {
@@ -1829,10 +1784,7 @@ body.ie ._ibg img {
   }
 
   .header._scroll .header__body {
-    -webkit-transition: height 0.3s ease 0s;
-    -o-transition: height 0.3s ease 0s;
-    transition: height 0.3s ease 0s;
-    height: 65px;
+    height: 75px;
   }
 }
 
@@ -1998,14 +1950,6 @@ body.ie ._ibg img {
 }
 
 @media (max-width: 1140px) {
-  .news__button {
-    height: calc(30px + 21 * ((100vw - 320px) / 820));
-  }
-
-  .news__button {
-    font-size: calc(13px + 3 * ((100vw - 320px) / 820));
-  }
-
   .news__body {
     padding-top: calc(20px + 50 * ((100vw - 320px) / 820));
   }
@@ -2111,6 +2055,12 @@ body.ie ._ibg img {
 
   .body-news__robe {
     min-width: 380px;
+  }
+}
+
+@media (max-width: 991px) {
+  .main-block__button {
+    background-color: rgba(0, 90, 193, 0.8);
   }
 }
 
@@ -2282,31 +2232,43 @@ body.ie ._ibg img {
     font-size: 20px;
   }
 
+  .header__wrapper {
+    background-color: #005bc1;
+  }
+
+  .header__wrapper::before {
+    content: "";
+    background-color: #005bc1;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    height: 70px;
+    z-index: 1;
+  }
+
   .header__body {
-    height: 60px;
+    height: 70px;
   }
 
   .header__img {
-    width: 80px;
-    height: 35px;
+    width: 120px;
+    height: 55px;
   }
 
   .menu__body {
     -webkit-transform: translate(0px, -100%);
         -ms-transform: translate(0px, -100%);
             transform: translate(0px, -100%);
-    -webkit-transition: -webkit-transform 0.8s ease 0s;
-    transition: -webkit-transform 0.8s ease 0s;
-    -o-transition: transform 0.8s ease 0s;
-    transition: transform 0.8s ease 0s;
-    transition: transform 0.8s ease 0s, -webkit-transform 0.8s ease 0s;
+    -webkit-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     overflow: auto;
-    margin-top: 60px;
     padding: 0px 10px 0px 10px;
   }
 
@@ -2314,12 +2276,16 @@ body.ie ._ibg img {
     -webkit-transform: translate(0px, 0%);
         -ms-transform: translate(0px, 0%);
             transform: translate(0px, 0%);
-    background-color: rgba(0, 100, 193, 0.9);
-    padding: 10px 0px;
+    background-color: #005BC1;
+    padding: 75px 0px;
   }
 
   .menu__body._active .menu__item {
-    margin: 0px 80px 0px 80px;
+    margin: 0px 70px 5px 70px;
+  }
+
+  .menu__body._active .menu__link {
+    font-size: 25px;
   }
 
   .menu__list {
@@ -2344,13 +2310,14 @@ body.ie ._ibg img {
         -ms-flex-pack: center;
             justify-content: center;
     margin: 0px 0px 0px 0px;
+    padding: 5px 0px;
   }
 
   .icon-menu {
     display: block;
     position: absolute;
-    top: 18px;
-    right: 20px;
+    top: 25px;
+    right: 10px;
     width: 30px;
     height: 18px;
     cursor: pointer;
@@ -2483,16 +2450,28 @@ body.ie ._ibg img {
 
 @media (max-width: 550px) {
   .main-block__body {
-    padding: 100px 0px 100px 0px;
+    margin-left: 10px;
   }
 
   .main-block__title {
-    font-size: 32px;
+    font-size: 42px;
   }
 
   .slider-projects__content {
     top: 60%;
     left: 9%;
+  }
+
+  .news {
+    padding-bottom: 30px;
+  }
+
+  .news__content {
+    display: block;
+  }
+
+  .news__button {
+    width: 190px;
   }
 
   .body-news__imagemilos {
@@ -2514,20 +2493,6 @@ body.ie ._ibg img {
 
   .body-news__robe {
     min-width: 300px;
-  }
-}
-
-@media (max-width: 480px) {
-  .news__content {
-    display: block;
-  }
-
-  .news__title {
-    margin-bottom: 20px;
-  }
-
-  .news__button {
-    padding: 0px 15px;
   }
 }
 
@@ -2567,5 +2532,9 @@ body.ie ._ibg img {
 
   .header._scroll .header__wrapper:hover {
     background-color: rgba(0, 91, 193, 0.9);
+  }
+
+  .main-block__button:hover {
+    background-color: rgba(0, 91, 193, 0.4);
   }
 }
