--- a/css/style.css
+++ b/css/style.css
@@ -1195,6 +1195,10 @@ body.ie ._ibg img {
   position: relative;
 }
 
+.main-block__container {
+  position: relative;
+}
+
 .main-block__body {
   padding: 282px 0px 201px 0px;
   margin-left: 190px;
@@ -1357,6 +1361,91 @@ body.ie ._ibg img {
   color: #343434;
 }
 
+.products__body._active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1110px;
+}
+
+.products__block {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 350px;
+}
+
+.products__block:not(:last-child) {
+  margin-right: 30px;
+}
+
+.products__image img {
+  max-width: 100%;
+}
+
+.products__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: Oswald;
+  font-size: 18px;
+  line-height: 150%;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
+  background-color: #005BC1;
+  margin: 200px 0px 15px 85px;
+}
+
+.products__content:hover {
+  background-color: #005ac1e3;
+  -webkit-transition: background-color 0.8s ease 0s;
+  -o-transition: background-color 0.8s ease 0s;
+  transition: background-color 0.8s ease 0s;
+}
+
+.products__title1 {
+  padding: 15px 36px 15px 21px;
+}
+
+.products__title2 {
+  padding: 30px 127px 29px 21px;
+}
+
+.products__title3 {
+  padding: 30px 141px 29px 21px;
+}
+
+.products__body2._active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1110px;
+  max-height: 505px;
+}
+
+.products__block2 {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 350px;
+}
+
+.products__block2:not(:last-child) {
+  margin-right: 30px;
+}
+
+.products__title4 {
+  padding: 15px 36px 15px 21px;
+}
+
+.products__title5 {
+  padding: 30px 127px 29px 21px;
+}
+
+.products__title6 {
+  padding: 30px 141px 29px 21px;
+}
+
 .tabs-products__item {
   cursor: pointer;
 }
@@ -1371,96 +1460,6 @@ body.ie ._ibg img {
   -o-transition: color 0.3s ease 0s;
   transition: color 0.3s ease 0s;
   border-bottom: 2px solid #005BC1;
-}
-
-.tabs-products__body {
-  display: none;
-}
-
-.tabs-products__body._active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 1110px;
-  max-height: 505px;
-}
-
-.tabs-products__block {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 350px;
-}
-
-.tabs-products__block:not(:last-child) {
-  margin-right: 30px;
-}
-
-.tabs-products__image img {
-  max-width: 100%;
-}
-
-.tabs-products__content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-family: Oswald;
-  font-size: 18px;
-  line-height: 150%;
-  letter-spacing: 0.05em;
-  color: #FFFFFF;
-  background-color: #005BC1;
-  margin: 200px 0px 15px 85px;
-}
-
-.tabs-products__content:hover {
-  background-color: #005ac1e3;
-  -webkit-transition: background-color 0.8s ease 0s;
-  -o-transition: background-color 0.8s ease 0s;
-  transition: background-color 0.8s ease 0s;
-}
-
-.tabs-products__title1 {
-  padding: 15px 36px 15px 21px;
-}
-
-.tabs-products__title2 {
-  padding: 30px 127px 29px 21px;
-}
-
-.tabs-products__title3 {
-  padding: 30px 141px 29px 21px;
-}
-
-.tabs-products__body2._active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 1110px;
-  max-height: 505px;
-}
-
-.tabs-products__block2 {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 350px;
-}
-
-.tabs-products__block2:not(:last-child) {
-  margin-right: 30px;
-}
-
-.tabs-products__title4 {
-  padding: 15px 36px 15px 21px;
-}
-
-.tabs-products__title5 {
-  padding: 30px 127px 29px 21px;
-}
-
-.tabs-products__title6 {
-  padding: 30px 141px 29px 21px;
 }
 
 .rent__body {
@@ -1799,6 +1798,19 @@ body.ie ._ibg img {
   }
 }
 
+@media (min-width: 1153px) {
+  .main-block__container::before {
+    content: "";
+    background-color: rgba(0, 91, 193, 0.6);
+    width: 444px;
+    height: 719px;
+    position: absolute;
+    top: 80px;
+    left: 15px;
+    z-index: 1;
+  }
+}
+
 @media (max-width: 1152px) {
   ._container {
     max-width: 970px;
@@ -1827,24 +1839,24 @@ body.ie ._ibg img {
     left: 230px;
   }
 
-  .tabs-products__content {
+  .products__content {
     margin: 170px 0px 15px 85px;
     font-size: 13px;
   }
 
-  .tabs-products__title2 {
+  .products__title2 {
     padding: 25px 104px 25px 21px;
   }
 
-  .tabs-products__title3 {
+  .products__title3 {
     padding: 25px 113px 25px 21px;
   }
 
-  .tabs-products__title5 {
+  .products__title5 {
     padding: 25px 104px 25px 21px;
   }
 
-  .tabs-products__title6 {
+  .products__title6 {
     padding: 25px 113px 25px 21px;
   }
 
@@ -1947,6 +1959,10 @@ body.ie ._ibg img {
 }
 
 @media (max-width: 1140px) {
+  .products {
+    padding-bottom: calc(50px + 100 * ((100vw - 320px) / 820));
+  }
+
   .news__body {
     padding-top: calc(20px + 50 * ((100vw - 320px) / 820));
   }
@@ -2022,31 +2038,31 @@ body.ie ._ibg img {
     padding: 30px 0px 20px 0px;
   }
 
-  .tabs-products__content {
+  .products__content {
     margin: 170px 0px 15px 85px;
   }
 
-  .tabs-products__title1 {
+  .products__title1 {
     padding: 6px 23px 6px 12px;
   }
 
-  .tabs-products__title2 {
+  .products__title2 {
     padding: 15px 80px 16px 21px;
   }
 
-  .tabs-products__title3 {
+  .products__title3 {
     padding: 15px 90px 16px 21px;
   }
 
-  .tabs-products__title4 {
+  .products__title4 {
     padding: 6px 23px 6px 12px;
   }
 
-  .tabs-products__title5 {
+  .products__title5 {
     padding: 15px 80px 16px 21px;
   }
 
-  .tabs-products__title6 {
+  .products__title6 {
     padding: 15px 90px 16px 21px;
   }
 
@@ -2062,7 +2078,7 @@ body.ie ._ibg img {
 }
 
 @media (max-width: 905px) {
-  .tabs-products__body._active {
+  .products__body._active {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: center;
@@ -2073,23 +2089,23 @@ body.ie ._ibg img {
             align-items: center;
   }
 
-  .tabs-products__block {
+  .products__block {
     padding: 5px 5px;
   }
 
-  .tabs-products__block:not(:last-child) {
+  .products__block:not(:last-child) {
     margin-right: 0px;
   }
 
-  .tabs-products__block {
+  .products__block {
     width: 300px;
   }
 
-  .tabs-products__content {
+  .products__content {
     margin: 190px 0px 15px 110px;
   }
 
-  .tabs-products__body2._active {
+  .products__body2._active {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: center;
@@ -2100,15 +2116,15 @@ body.ie ._ibg img {
             align-items: center;
   }
 
-  .tabs-products__block2 {
+  .products__block2 {
     padding: 5px 5px;
   }
 
-  .tabs-products__block2:not(:last-child) {
+  .products__block2:not(:last-child) {
     margin-right: 0px;
   }
 
-  .tabs-products__block2 {
+  .products__block2 {
     width: 300px;
   }
 }
@@ -2381,11 +2397,7 @@ body.ie ._ibg img {
 }
 
 @media (max-width: 619px) {
-  .tabs-products__body._active {
-    margin: 0px 0px 150px 0px;
-  }
-
-  .tabs-products__body2._active {
+  .products__body2._active {
     margin: 0px 0px 150px 0px;
   }
 
